# Circlepod-Protocol

./: .eslintrc.json  .gitignore  README.md  package.json  tsconfig.json  tslint.json
contract/: .gitignore  Anchor.toml
contract/client/: app_utils.ts  client.ts  client_staking_drops_app.ts  client_staking_lockup.ts  client_staking_lockup_app.ts  client_staking_lockup_init.ts  create-new-pool.ts  drops-reward.ts  hello_world.ts  ido-config.ts  ido-init.ts  ido-process.ts  lockup-init.ts  lockup_utils.ts  registry-init.ts
contract/client/asset/: user.json
contract/client/types/: member_account.ts
contract/example/: ido.rs  staking-registry.rs
contract/example/ts/: lockup_utils.ts
contract/migrations/: deploy.js
contract/programs/circlepod-protocol/: Cargo.toml
contract/programs/circlepod-protocol/src/: lib.rs
contract/programs/ido-sale/: Cargo.toml
contract/programs/ido-sale/src/: lib.rs
contract/programs/lockup/: Cargo.toml
contract/programs/lockup/src/: lib.rs
contract/programs/staking-lockup/: Cargo.toml
contract/programs/staking-lockup/src/: calculator.rs  lib.rs
contract/programs/staking-registry/: Cargo.toml
contract/programs/staking-registry/src/: lib.rs
contract/programs/token-proxy/: Cargo.toml
contract/programs/token-proxy/src/: lib.rs
contract/tests/: circlepod-protocol.js  ido-sale.js  ido.js  lockup.js
contract/tests/utils/: index.js  lockup.js
program/src/: lib.rs
