[package]
name = "circlepod-protocol"
version = "0.1.0"
description = "Circlepod Protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "circlepod_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.7.0"
anchor-spl = "0.7.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }