[package]
name = "staking-lockup"
version = "0.1.0"
description = "Created with Circlepod"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_lockup"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
anchor-deprecated-state = []
default = ["anchor-deprecated-state"]

[dependencies]
anchor-lang = "0.16.1"
anchor-spl = "0.16.1"
