[package]
name = "staking-registry"
version = "0.1.0"
description = "Created with Circlepod"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_registry"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
anchor-deprecated-state = []
default = ["anchor-deprecated-state"]

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
staking-lockup = { path = "../staking-lockup", features = ["cpi"] }